flex wrap elements drawer, fix elements bleeding out

--- a/frontend/components/editor/Design.module.css
+++ b/frontend/components/editor/Design.module.css
@@ -5,6 +5,13 @@
   position: relative;
 }
 
+.elementsContainer {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .selected {
   pointer-events: none;
   position: absolute;
